--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -116,17 +116,31 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.27999999999999997"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ans1 = None\n",
+    "\"ans1 = P(B|A) * P(A)\" \n",
+    "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "ans1 = 0.4 * 0.7\n",
+    "\n",
+    "# raise NotImplementedError()\n",
     "ans1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -175,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -189,17 +203,29 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5599999999999999"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ans2 = None\n",
+    "\"ans2 = P(AandB)/ P(B)\"\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "ans2 = ans1 / 0.5\n",
+    "# raise NotImplementedError()\n",
     "ans2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
