--- a/index.ipynb
+++ b/index.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -288,17 +288,31 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ans3 = None\n",
+    "\"P(AorB) == P(A) + P(B))\"\n",
+    "\"P(AorB) = P(A)+ P(B) - P(AandB) \"\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "ans3_1 = 0.7 + 0.5 - ans1\n",
+    "ans3 = ans3_1 == 0.7 + 0.5 \n",
+    "# raise NotImplementedError()\n",
     "ans3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -373,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -387,17 +401,33 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.15384615384615385"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ans4 = None\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "total_cards = 52\n",
+    "king = 4\n",
+    "queen = 4\n",
+    "\"P(king_or_queen) = (king + queen) / total_cards\"\n",
+    "ans4 = (king + queen) / total_cards\n",
+    "# raise NotImplementedError()\n",
     "ans4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -446,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -460,17 +490,30 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2598960.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ans5 = None\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "cards_to_choose = 5\n",
+    "ans5 = math.factorial(total_cards) / (math.factorial(cards_to_choose) * math.factorial(total_cards - cards_to_choose))\n",
+    "# raise NotImplementedError()\n",
     "ans5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
